recursion.cons.lessons.recursion.cons.IsMember.scala.error
isMember:7: error: not enough arguments for method isMember: (l: List[Int], v: Int)Boolean.
Unspecified value parameter v.
	else return isMember(l.trail)
                            ^